--- a/lib/condition/Readme
+++ b/lib/condition/Readme
@@ -1,13 +1,30 @@
-const inputObject = {
-    "$and": {
-        "!=": { "field6": 60 },
-        "=": { "field81": 10 },
-    },
+## conditions(condition, subOperator)
+
+Generates SQL-like conditions based on the provided input condition object and sub-operator.
+
+### Parameters
+
+- `condition`: The condition object containing various condition types such as simple operations, inclusion, patterns, and between ranges.
+- `subOperator`: (Optional) The sub-operator to be used between multiple conditions. Defaults to "AND".
+
+### Returns
+
+The generated conditions as a string.
+
+### Usage Example
+
+```javascript
+
+const condition = {
+  "$and": {
+    "field1": { "=": 10 },
+    "field2": { "$not_include": { "value1": [1, 2, 3], "value2": [4, 5, 6] } },
     "$or": {
-        "=": { "field1": 10 },
-        ">": { "field2": 200 },
-    },
-    "$pattern": {
+      "field3": { "$pattern": { "subfield": "pattern*" } },
+      "field4": { "$between": { "$from": 10, "$to": 20 } }
+    }
+  },
+  "$pattern": {
         test2: `%5`,
         "$and": {
             test3: `%64%`,
@@ -98,3 +115,7 @@ const inputObject = {
         }
     }
 };
+
+const sqlConditions = conditions(condition, "OR");
+console.log(sqlConditions);
+// Output: "(field1 = 10) OR (field2 NOT IN ('value1', 'value2')) OR ((field3 LIKE 'pattern*') OR (field4 BETWEEN 10 AND 20))"
